tests/toy/pos/000074_cdrc2.toylang
program a = { if a == a then a = a; } .
