tests/toy/neg/000860_mutation.toylang
program a = { a if = a; } .
